Create database if not exists
Create databse and execute sql scripts from resources.

--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -209,19 +209,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CinemaDatabase.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="CinemaDatabase_log.ldf">
-      <DependentUpon>CinemaDatabase.mdf</DependentUpon>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Resource Include="res\bg.jpg" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 i x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -230,6 +223,14 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Properties\Queries\Inserts.sql" />
+    <None Include="Properties\Queries\CreateTables.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Properties\Queries\DropTables.sql" />
+    <Content Include="Properties\Queries\Procedures\GetMoviesByGenre.sql" />
+    <Content Include="Properties\Queries\Procedures\MostPopularMovies.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
