GH-2 Add SRGS file for MainPage

--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -210,6 +210,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Resources\MainPage.srgs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
