--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -97,8 +97,8 @@
     <Compile Include="DescriptionWindow.xaml.cs">
       <DependentUpon>DescriptionWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ISpeechRecognize.cs" />
     <Compile Include="Page.cs" />
-    <Compile Include="SpeechControllable.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
