GH-4 Add ISpeechSynthesis interface

--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -98,6 +98,7 @@
       <DependentUpon>DescriptionWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ISpeechRecognize.cs" />
+    <Compile Include="ISpeechSynthesis.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
