GH-4 Add SpeechPage class

--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -118,6 +118,7 @@
     <Compile Include="SeatButton.xaml.cs">
       <DependentUpon>SeatButton.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SpeechPage.cs" />
     <Compile Include="SummaryPage.xaml.cs">
       <DependentUpon>SummaryPage.xaml</DependentUpon>
     </Compile>
