--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -119,6 +119,7 @@
       <DependentUpon>SeatButton.xaml</DependentUpon>
     </Compile>
     <Compile Include="SpeechPage.cs" />
+    <Compile Include="SqlConnectionFactory.cs" />
     <Compile Include="SummaryPage.xaml.cs">
       <DependentUpon>SummaryPage.xaml</DependentUpon>
     </Compile>
