Added OrderPage.srgs and adjusted OrderPage to handle speech operations

--- a/Cinema/Cinema/Cinema.csproj
+++ b/Cinema/Cinema/Cinema.csproj
@@ -223,6 +223,9 @@
     <None Include="Resources\MainPage.srgs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\OrderPage.srgs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\SearchPage.srgs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
