GH-12 Add SRGS file

--- a/Cinema/Cinema.csproj
+++ b/Cinema/Cinema.csproj
@@ -242,6 +242,9 @@
     <None Include="Resources\SearchPage.srgs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\TicketDataPage.srgs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
